--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.25.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
